Crear/Actualizar SEARCH/index.html

--- a/SEARCH/index.html
+++ b/SEARCH/index.html
@@ -124,7 +124,16 @@
 
 <main class="flex-1 px-4 py-6 max-w-7xl mx-auto mt-16">
   <ul id="busquedas" class="grid grid-cols-3 sm:grid-cols-4 md:grid-cols-5 lg:grid-cols-6 gap-4">
-<!--ABAJO AGREGAR NUEVO CONTENIDO --><!-- El ejercito de los ladrones -->
+<!--ABAJO AGREGAR NUEVO CONTENIDO --><!-- Mi Amigo El Gigante -->
+<li>
+  <a href="../Peliculas/pelicula700.html" tabindex="0" class="block outline-none focus:ring-2 ring-yellow-400 rounded">
+   <img 
+  src="https://image.tmdb.org/t/p/original/sglHfkazJxsIWHPlHrzb60mULLI.jpg" alt="poster" class="w-full aspect-[2/3] rounded-lg object-cover mb-2 sm:mb-0" loading="lazy"/>
+    <span class="hidden">Mi Amigo El Gigante 2016</span>
+    <span class="hidden">Sophie, una pequeña niña que vive en un orfanato, se encuentra con un gigante amigable quien, a pesar de tener una apariencia intimidante, resulta ser tierno y amable, pero su problema es que no es aceptado por el resto de los gigantes, ya que se rehúsa a comer niños.</span>
+  </a>
+</li>
+<!--FIN--><!-- El ejercito de los ladrones -->
 <li>
   <a href="../Peliculas/pelicula699.html" tabindex="0" class="block outline-none focus:ring-2 ring-yellow-400 rounded">
    <img 
