--- a/Categorias/movie/index.html
+++ b/Categorias/movie/index.html
@@ -75,7 +75,17 @@
 </header>
 <main class="max-w-[1280px] mx-auto px-4 mt-24">
 <section class="grid grid-cols-2 sm:grid-cols-3 md:grid-cols-4 lg:grid-cols-6 gap-4">
-<!--PEGAR CONTENIDO AQUI ABAJO--><!-- Mi Amigo El Gigante -->
+<!--PEGAR CONTENIDO AQUI ABAJO--><!-- Guerra mundial Z -->
+<article class="relative rounded-lg overflow-hidden cursor-pointer select-none">
+  <a href="../../Peliculas/pelicula701.html">
+    <img src="https://image.tmdb.org/t/p/original/a8ogjWFd0QS6BzBkzfDMWukc26i.jpg" alt="Guerra mundial Z" class="w-full h-auto rounded-lg object-cover transition-transform duration-300 hover:scale-105"/>
+    <div class="absolute top-2 right-2 bg-white/90 text-black text-xs font-semibold rounded-full px-2 py-0.5">
+      Movie
+    </div>
+  </a>
+  <div class="mt-2 font-semibold text-sm leading-tight truncate">Guerra mundial Z</div>
+  <div class="text-xs text-white/70">2013</div>
+</article><!-- Mi Amigo El Gigante -->
 <article class="relative rounded-lg overflow-hidden cursor-pointer select-none">
   <a href="../../Peliculas/pelicula700.html">
     <img src="https://image.tmdb.org/t/p/original/sglHfkazJxsIWHPlHrzb60mULLI.jpg" alt="Mi Amigo El Gigante" class="w-full h-auto rounded-lg object-cover transition-transform duration-300 hover:scale-105"/>
