Crear/Actualizar SEARCH/index.html

--- a/SEARCH/index.html
+++ b/SEARCH/index.html
@@ -124,7 +124,16 @@
 
 <main class="flex-1 px-4 py-6 max-w-7xl mx-auto mt-16">
   <ul id="busquedas" class="grid grid-cols-3 sm:grid-cols-4 md:grid-cols-5 lg:grid-cols-6 gap-4">
-<!--ABAJO AGREGAR NUEVO CONTENIDO --><!-- Mi Amigo El Gigante -->
+<!--ABAJO AGREGAR NUEVO CONTENIDO --><!-- Guerra mundial Z -->
+<li>
+  <a href="../Peliculas/pelicula701.html" tabindex="0" class="block outline-none focus:ring-2 ring-yellow-400 rounded">
+   <img 
+  src="https://image.tmdb.org/t/p/original/a8ogjWFd0QS6BzBkzfDMWukc26i.jpg" alt="poster" class="w-full aspect-[2/3] rounded-lg object-cover mb-2 sm:mb-0" loading="lazy"/>
+    <span class="hidden">Guerra mundial Z 2013</span>
+    <span class="hidden">Gerry Lane, antiguo empleado de las Naciones Unidas, recorre el mundo en una carrera contrarreloj para detener una pandemia zombi que está derribando ejércitos y gobiernos y amenaza con destruir a la propia humanidad.</span>
+  </a>
+</li>
+<!--FIN--><!-- Mi Amigo El Gigante -->
 <li>
   <a href="../Peliculas/pelicula700.html" tabindex="0" class="block outline-none focus:ring-2 ring-yellow-400 rounded">
    <img 
