--- a/SEARCH/index.html
+++ b/SEARCH/index.html
@@ -124,7 +124,16 @@
 
 <main class="flex-1 px-4 py-6 max-w-7xl mx-auto mt-16">
   <ul id="busquedas" class="grid grid-cols-3 sm:grid-cols-4 md:grid-cols-5 lg:grid-cols-6 gap-4">
-<!--ABAJO AGREGAR NUEVO CONTENIDO --><!-- Guerra mundial Z -->
+<!--ABAJO AGREGAR NUEVO CONTENIDO --><!-- Resident Evil: El Huesped Maldito -->
+<li>
+  <a href="../Peliculas/pelicula702.html" tabindex="0" class="block outline-none focus:ring-2 ring-yellow-400 rounded">
+   <img 
+  src="https://image.tmdb.org/t/p/original/nlAi9cw2uLZ9hHwhzCMOG6TZMHc.jpg" alt="poster" class="w-full aspect-[2/3] rounded-lg object-cover mb-2 sm:mb-0" loading="lazy"/>
+    <span class="hidden">Resident Evil: El Huésped Maldito 2002</span>
+    <span class="hidden">Una unidad militar especial lucha contra una poderosa supercomputadora fuera de control y contra cientos de científicos que han mutado en criaturas carnívoras después de un accidente de laboratorio.</span>
+  </a>
+</li>
+<!--FIN--><!-- Guerra mundial Z -->
 <li>
   <a href="../Peliculas/pelicula701.html" tabindex="0" class="block outline-none focus:ring-2 ring-yellow-400 rounded">
    <img 
