Crear/Actualizar SEARCH/index.html

--- a/SEARCH/index.html
+++ b/SEARCH/index.html
@@ -124,7 +124,16 @@
 
 <main class="flex-1 px-4 py-6 max-w-7xl mx-auto mt-16">
   <ul id="busquedas" class="grid grid-cols-3 sm:grid-cols-4 md:grid-cols-5 lg:grid-cols-6 gap-4">
-<!--ABAJO AGREGAR NUEVO CONTENIDO --><!-- Resident Evil: El Huesped Maldito -->
+<!--ABAJO AGREGAR NUEVO CONTENIDO --><!-- Resident Evil: Apocalipsis -->
+<li>
+  <a href="../Peliculas/pelicula703.html" tabindex="0" class="block outline-none focus:ring-2 ring-yellow-400 rounded">
+   <img 
+  src="https://image.tmdb.org/t/p/original/8tNrm8TgAeSgH35rPs2WJD26Hnf.jpg" alt="poster" class="w-full aspect-[2/3] rounded-lg object-cover mb-2 sm:mb-0" loading="lazy"/>
+    <span class="hidden">Resident Evil: Apocalipsis 2004</span>
+    <span class="hidden">Alice se despierta en el hospital de Raccoon City después de que la zona haya sido invadida por los zombis, y ahora debe conseguir salir de la ciudad antes de que se lance una bomba nuclear.</span>
+  </a>
+</li>
+<!--FIN--><!-- Resident Evil: El Huesped Maldito -->
 <li>
   <a href="../Peliculas/pelicula702.html" tabindex="0" class="block outline-none focus:ring-2 ring-yellow-400 rounded">
    <img 
