--- a/Categorias/accion/index.html
+++ b/Categorias/accion/index.html
@@ -75,7 +75,17 @@ stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
 </header>
 <main class="max-w-[1280px] mx-auto px-4 mt-24">
 <section class="grid grid-cols-2 sm:grid-cols-3 md:grid-cols-4 lg:grid-cols-6 gap-4">
-<!--PEGAR CONTENIDO AQUI ABAJO--><!-- Resident Evil: Apocalipsis -->
+<!--PEGAR CONTENIDO AQUI ABAJO--><!-- Resident Evil 3: La extincion -->
+<article class="relative rounded-lg overflow-hidden cursor-pointer select-none">
+  <a href="../../Peliculas/pelicula704.html">
+    <img src="https://image.tmdb.org/t/p/original/lP0cconRQqe6O4c6L2mVADDvFyt.jpg" alt="Resident Evil 3: La extinción" class="w-full h-auto rounded-lg object-cover transition-transform duration-300 hover:scale-105"/>
+    <div class="absolute top-2 right-2 bg-white/90 text-black text-xs font-semibold rounded-full px-2 py-0.5">
+      Movie
+    </div>
+  </a>
+  <div class="mt-2 font-semibold text-sm leading-tight truncate">Resident Evil 3: La extinción</div>
+  <div class="text-xs text-white/70">2007</div>
+</article><!-- Resident Evil: Apocalipsis -->
 <article class="relative rounded-lg overflow-hidden cursor-pointer select-none">
   <a href="../../Peliculas/pelicula703.html">
     <img src="https://image.tmdb.org/t/p/original/8tNrm8TgAeSgH35rPs2WJD26Hnf.jpg" alt="Resident Evil: Apocalipsis" class="w-full h-auto rounded-lg object-cover transition-transform duration-300 hover:scale-105"/>
