--- a/SEARCH/index.html
+++ b/SEARCH/index.html
@@ -124,7 +124,16 @@
 
 <main class="flex-1 px-4 py-6 max-w-7xl mx-auto mt-16">
   <ul id="busquedas" class="grid grid-cols-3 sm:grid-cols-4 md:grid-cols-5 lg:grid-cols-6 gap-4">
-<!--ABAJO AGREGAR NUEVO CONTENIDO --><!-- Resident Evil 3: La extincion -->
+<!--ABAJO AGREGAR NUEVO CONTENIDO --><!-- Resident Evil 4: La resurreccion -->
+<li>
+  <a href="../Peliculas/pelicula705.html" tabindex="0" class="block outline-none focus:ring-2 ring-yellow-400 rounded">
+   <img 
+  src="https://image.tmdb.org/t/p/original/j7obkD5UQUydpBOBRpToLWIWkwq.jpg" alt="poster" class="w-full aspect-[2/3] rounded-lg object-cover mb-2 sm:mb-0" loading="lazy"/>
+    <span class="hidden">Resident Evil 4: La resurrección 2010</span>
+    <span class="hidden">Mientras aún está en la búsqueda de la destrucción de la malvada Corporación Umbrella, Alice se une a un grupo de supervivientes que viven en una prisión rodeados de infectados y que también quieren trasladarse al misterioso pero supuestamente indemne refugio conocido como Arcadia.</span>
+  </a>
+</li>
+<!--FIN--><!-- Resident Evil 3: La extincion -->
 <li>
   <a href="../Peliculas/pelicula704.html" tabindex="0" class="block outline-none focus:ring-2 ring-yellow-400 rounded">
    <img 
