Crear/Actualizar SEARCH/index.html

--- a/SEARCH/index.html
+++ b/SEARCH/index.html
@@ -124,7 +124,16 @@
 
 <main class="flex-1 px-4 py-6 max-w-7xl mx-auto mt-16">
   <ul id="busquedas" class="grid grid-cols-3 sm:grid-cols-4 md:grid-cols-5 lg:grid-cols-6 gap-4">
-<!--ABAJO AGREGAR NUEVO CONTENIDO --><!-- Resident Evil 4: La resurreccion -->
+<!--ABAJO AGREGAR NUEVO CONTENIDO --><!-- Resident Evil 5: La venganza -->
+<li>
+  <a href="../Peliculas/pelicula706.html" tabindex="0" class="block outline-none focus:ring-2 ring-yellow-400 rounded">
+   <img 
+  src="https://image.tmdb.org/t/p/original/yYZQXdfGNPMjBi18suxPuWii6MP.jpg" alt="poster" class="w-full aspect-[2/3] rounded-lg object-cover mb-2 sm:mb-0" loading="lazy"/>
+    <span class="hidden">Resident Evil 5: La venganza 2012</span>
+    <span class="hidden">Alice lucha junto a un movimiento de resistencia para recuperar su libertad de una instalación de pruebas de la Corporación Umbrella.</span>
+  </a>
+</li>
+<!--FIN--><!-- Resident Evil 4: La resurreccion -->
 <li>
   <a href="../Peliculas/pelicula705.html" tabindex="0" class="block outline-none focus:ring-2 ring-yellow-400 rounded">
    <img 
