--- a/Categorias/movie/index.html
+++ b/Categorias/movie/index.html
@@ -75,7 +75,17 @@
 </header>
 <main class="max-w-[1280px] mx-auto px-4 mt-24">
 <section class="grid grid-cols-2 sm:grid-cols-3 md:grid-cols-4 lg:grid-cols-6 gap-4">
-<!--PEGAR CONTENIDO AQUI ABAJO--><!-- Resident Evil 5: La venganza -->
+<!--PEGAR CONTENIDO AQUI ABAJO--><!-- Resident Evil 6: Capitulo final -->
+<article class="relative rounded-lg overflow-hidden cursor-pointer select-none">
+  <a href="../../Peliculas/pelicula707.html">
+    <img src="https://image.tmdb.org/t/p/original/cC2dEleI8zDT045QhuqVjf527yv.jpg" alt="Resident Evil 6: Capítulo final" class="w-full h-auto rounded-lg object-cover transition-transform duration-300 hover:scale-105"/>
+    <div class="absolute top-2 right-2 bg-white/90 text-black text-xs font-semibold rounded-full px-2 py-0.5">
+      Movie
+    </div>
+  </a>
+  <div class="mt-2 font-semibold text-sm leading-tight truncate">Resident Evil 6: Capítulo final</div>
+  <div class="text-xs text-white/70">2016</div>
+</article><!-- Resident Evil 5: La venganza -->
 <article class="relative rounded-lg overflow-hidden cursor-pointer select-none">
   <a href="../../Peliculas/pelicula706.html">
     <img src="https://image.tmdb.org/t/p/original/yYZQXdfGNPMjBi18suxPuWii6MP.jpg" alt="Resident Evil 5: La venganza" class="w-full h-auto rounded-lg object-cover transition-transform duration-300 hover:scale-105"/>
