Crear/Actualizar SEARCH/index.html

--- a/SEARCH/index.html
+++ b/SEARCH/index.html
@@ -124,7 +124,16 @@
 
 <main class="flex-1 px-4 py-6 max-w-7xl mx-auto mt-16">
   <ul id="busquedas" class="grid grid-cols-3 sm:grid-cols-4 md:grid-cols-5 lg:grid-cols-6 gap-4">
-<!--ABAJO AGREGAR NUEVO CONTENIDO --><!-- Resident Evil 5: La venganza -->
+<!--ABAJO AGREGAR NUEVO CONTENIDO --><!-- Resident Evil 6: Capitulo final -->
+<li>
+  <a href="../Peliculas/pelicula707.html" tabindex="0" class="block outline-none focus:ring-2 ring-yellow-400 rounded">
+   <img 
+  src="https://image.tmdb.org/t/p/original/cC2dEleI8zDT045QhuqVjf527yv.jpg" alt="poster" class="w-full aspect-[2/3] rounded-lg object-cover mb-2 sm:mb-0" loading="lazy"/>
+    <span class="hidden">Resident Evil 6: Capítulo final 2016</span>
+    <span class="hidden">Alice regresa a donde comenzó la pesadilla: El Panal en Raccoon City, donde la Corporación Umbrella está reuniendo sus fuerzas para un ataque final contra los únicos sobrevivientes del apocalipsis.</span>
+  </a>
+</li>
+<!--FIN--><!-- Resident Evil 5: La venganza -->
 <li>
   <a href="../Peliculas/pelicula706.html" tabindex="0" class="block outline-none focus:ring-2 ring-yellow-400 rounded">
    <img 
