--- a/SEARCH/index.html
+++ b/SEARCH/index.html
@@ -165,7 +165,7 @@
   <a href="../Peliculas/pelicula703.html" tabindex="0" class="block outline-none focus:ring-2 ring-yellow-400 rounded">
    <img 
   src="https://image.tmdb.org/t/p/original/8tNrm8TgAeSgH35rPs2WJD26Hnf.jpg" alt="poster" class="w-full aspect-[2/3] rounded-lg object-cover mb-2 sm:mb-0" loading="lazy"/>
-    <span class="hidden">Resident Evil: Apocalipsis 2004</span>
+    <span class="hidden">Resident Evil 2: Apocalipsis 2004</span>
     <span class="hidden">Alice se despierta en el hospital de Raccoon City después de que la zona haya sido invadida por los zombis, y ahora debe conseguir salir de la ciudad antes de que se lance una bomba nuclear.</span>
   </a>
 </li>
@@ -174,7 +174,7 @@
   <a href="../Peliculas/pelicula702.html" tabindex="0" class="block outline-none focus:ring-2 ring-yellow-400 rounded">
    <img 
   src="https://image.tmdb.org/t/p/original/nlAi9cw2uLZ9hHwhzCMOG6TZMHc.jpg" alt="poster" class="w-full aspect-[2/3] rounded-lg object-cover mb-2 sm:mb-0" loading="lazy"/>
-    <span class="hidden">Resident Evil: El Huésped Maldito 2002</span>
+    <span class="hidden">Resident Evil 1: El Huésped Maldito 2002</span>
     <span class="hidden">Una unidad militar especial lucha contra una poderosa supercomputadora fuera de control y contra cientos de científicos que han mutado en criaturas carnívoras después de un accidente de laboratorio.</span>
   </a>
 </li>
