Crear/Actualizar SEARCH/index.html

--- a/SEARCH/index.html
+++ b/SEARCH/index.html
@@ -124,7 +124,16 @@
 
 <main class="flex-1 px-4 py-6 max-w-7xl mx-auto mt-16">
   <ul id="busquedas" class="grid grid-cols-3 sm:grid-cols-4 md:grid-cols-5 lg:grid-cols-6 gap-4">
-<!--ABAJO AGREGAR NUEVO CONTENIDO --><!-- Resident Evil 6: Capitulo final -->
+<!--ABAJO AGREGAR NUEVO CONTENIDO --><!-- 20 Anos No Importan -->
+<li>
+  <a href="../Peliculas/pelicula708.html" tabindex="0" class="block outline-none focus:ring-2 ring-yellow-400 rounded">
+   <img 
+  src="https://image.tmdb.org/t/p/original/8Zo5Ve9NHUMRaLymJmrnw0czVr.jpg" alt="poster" class="w-full aspect-[2/3] rounded-lg object-cover mb-2 sm:mb-0" loading="lazy"/>
+    <span class="hidden">20 Años No Importan 2013</span>
+    <span class="hidden">La editora de moda Alice ve su carrera ascender tras aparecer en una foto con un chico más joven. Cuando el chico se da cuenta de que lo usa, la deja, pero ella trata de recuperarlo al comprender que está enamorada.</span>
+  </a>
+</li>
+<!--FIN--><!-- Resident Evil 6: Capitulo final -->
 <li>
   <a href="../Peliculas/pelicula707.html" tabindex="0" class="block outline-none focus:ring-2 ring-yellow-400 rounded">
    <img 
