--- a/SEARCH/index.html
+++ b/SEARCH/index.html
@@ -124,7 +124,16 @@
 
 <main class="flex-1 px-4 py-6 max-w-7xl mx-auto mt-16">
   <ul id="busquedas" class="grid grid-cols-3 sm:grid-cols-4 md:grid-cols-5 lg:grid-cols-6 gap-4">
-<!--ABAJO AGREGAR NUEVO CONTENIDO --><!-- 20 Anos No Importan -->
+<!--ABAJO AGREGAR NUEVO CONTENIDO --><!-- Los tipos malos 2 -->
+<li>
+  <a href="../Peliculas/pelicula709.html" tabindex="0" class="block outline-none focus:ring-2 ring-yellow-400 rounded">
+   <img 
+  src="https://image.tmdb.org/t/p/original/mZmnKDhIS2yNmtfzde5vtdCYzBF.jpg" alt="poster" class="w-full aspect-[2/3] rounded-lg object-cover mb-2 sm:mb-0" loading="lazy"/>
+    <span class="hidden">Los tipos malos 2 2025</span>
+    <span class="hidden">Un genial equipo de animales que no respetan la ley, los ahora muy reformados Tipos Malos, se esfuerzan (mucho, muchísimo) en ser buenos, pero se ven envueltos involuntariamente en un golpe de envergadura mundial planeado por un inesperado grupo de criminales: las Tipas Malas.</span>
+  </a>
+</li>
+<!--FIN--><!-- 20 Anos No Importan -->
 <li>
   <a href="../Peliculas/pelicula708.html" tabindex="0" class="block outline-none focus:ring-2 ring-yellow-400 rounded">
    <img 
