Crear/Actualizar SEARCH/index.html

--- a/SEARCH/index.html
+++ b/SEARCH/index.html
@@ -124,7 +124,16 @@
 
 <main class="flex-1 px-4 py-6 max-w-7xl mx-auto mt-16">
   <ul id="busquedas" class="grid grid-cols-3 sm:grid-cols-4 md:grid-cols-5 lg:grid-cols-6 gap-4">
-<!--ABAJO AGREGAR NUEVO CONTENIDO --><!-- Los tipos malos 2 -->
+<!--ABAJO AGREGAR NUEVO CONTENIDO --><!-- Five Nights at Freddy's -->
+<li>
+  <a href="../Peliculas/pelicula710.html" tabindex="0" class="block outline-none focus:ring-2 ring-yellow-400 rounded">
+   <img 
+  src="https://image.tmdb.org/t/p/original/8KzQdF8xERPFvCnrHKfaXuNQBH4.jpg" alt="poster" class="w-full aspect-[2/3] rounded-lg object-cover mb-2 sm:mb-0" loading="lazy"/>
+    <span class="hidden">Five Nights at Freddy's 2023</span>
+    <span class="hidden">Un guardia de seguridad con problemas comienza a trabajar en Freddy Fazbear's Pizza. Mientras pasa su primera noche en el trabajo, se da cuenta de que el turno de noche en Freddy's no será tan fácil de superar.</span>
+  </a>
+</li>
+<!--FIN--><!-- Los tipos malos 2 -->
 <li>
   <a href="../Peliculas/pelicula709.html" tabindex="0" class="block outline-none focus:ring-2 ring-yellow-400 rounded">
    <img 
