Crear/Actualizar SEARCH/index.html

--- a/SEARCH/index.html
+++ b/SEARCH/index.html
@@ -124,7 +124,16 @@
 
 <main class="flex-1 px-4 py-6 max-w-7xl mx-auto mt-16">
   <ul id="busquedas" class="grid grid-cols-3 sm:grid-cols-4 md:grid-cols-5 lg:grid-cols-6 gap-4">
-<!--ABAJO AGREGAR NUEVO CONTENIDO --><!-- Five Nights at Freddy's -->
+<!--ABAJO AGREGAR NUEVO CONTENIDO --><!-- Los Tipos Malos -->
+<li>
+  <a href="../Peliculas/pelicula711.html" tabindex="0" class="block outline-none focus:ring-2 ring-yellow-400 rounded">
+   <img 
+  src="https://image.tmdb.org/t/p/original/czxHSOXyKd6zEvIOvUTxAwqOjcK.jpg" alt="poster" class="w-full aspect-[2/3] rounded-lg object-cover mb-2 sm:mb-0" loading="lazy"/>
+    <span class="hidden">Los Tipos Malos 2022</span>
+    <span class="hidden">Cuando los Bad Guys, un grupo de animales antropormóficos criminales, finalmente son capturados después de años de atracos y de ser los villanos más buscados del mundo, el Sr. Wolf negocia un trato para salvarlos a todos de la prisión.</span>
+  </a>
+</li>
+<!--FIN--><!-- Five Nights at Freddy's -->
 <li>
   <a href="../Peliculas/pelicula710.html" tabindex="0" class="block outline-none focus:ring-2 ring-yellow-400 rounded">
    <img 
