--- a/SEARCH/index.html
+++ b/SEARCH/index.html
@@ -124,7 +124,16 @@
 
 <main class="flex-1 px-4 py-6 max-w-7xl mx-auto mt-16">
   <ul id="busquedas" class="grid grid-cols-3 sm:grid-cols-4 md:grid-cols-5 lg:grid-cols-6 gap-4">
-<!--ABAJO AGREGAR NUEVO CONTENIDO --><!-- Los Tipos Malos -->
+<!--ABAJO AGREGAR NUEVO CONTENIDO --><!-- Los 4 Fantasticos: Primeros pasos -->
+<li>
+  <a href="../Peliculas/pelicula712.html" tabindex="0" class="block outline-none focus:ring-2 ring-yellow-400 rounded">
+   <img 
+  src="https://image.tmdb.org/t/p/original/ckfiXWGEMWrUP53cc6QyHijLlhl.jpg" alt="poster" class="w-full aspect-[2/3] rounded-lg object-cover mb-2 sm:mb-0" loading="lazy"/>
+    <span class="hidden">Los 4 Fantásticos: Primeros pasos 2025</span>
+    <span class="hidden">Con un estruendoso trasfondo en un mundo retrofuturista inspirado en los años 60, la Primera Familia de Marvel enfrenta su desafío más intimidante hasta ahora. Obligados a equilibrar sus roles como héroes con la fuerza de su vínculo familiar, deben defender la Tierra de un voraz dios espacial llamado Galactus y su enigmático heraldo, Silver Surfer.</span>
+  </a>
+</li>
+<!--FIN--><!-- Los Tipos Malos -->
 <li>
   <a href="../Peliculas/pelicula711.html" tabindex="0" class="block outline-none focus:ring-2 ring-yellow-400 rounded">
    <img 
