--- a/Categorias/accion/index.html
+++ b/Categorias/accion/index.html
@@ -75,7 +75,17 @@ stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
 </header>
 <main class="max-w-[1280px] mx-auto px-4 mt-24">
 <section class="grid grid-cols-2 sm:grid-cols-3 md:grid-cols-4 lg:grid-cols-6 gap-4">
-<!--PEGAR CONTENIDO AQUI ABAJO--><!-- Resident Evil 6: Capitulo final -->
+<!--PEGAR CONTENIDO AQUI ABAJO--><!-- Los 4 Fantasticos -->
+<article class="relative rounded-lg overflow-hidden cursor-pointer select-none">
+  <a href="../../Peliculas/pelicula713.html">
+    <img src="https://image.tmdb.org/t/p/original/l3Yk65bVdgiMOMeK6O8aZxEBt5J.jpg" alt="Los 4 Fantásticos" class="w-full h-auto rounded-lg object-cover transition-transform duration-300 hover:scale-105"/>
+    <div class="absolute top-2 right-2 bg-white/90 text-black text-xs font-semibold rounded-full px-2 py-0.5">
+      Movie
+    </div>
+  </a>
+  <div class="mt-2 font-semibold text-sm leading-tight truncate">Los 4 Fantásticos</div>
+  <div class="text-xs text-white/70">2005</div>
+</article><!-- Resident Evil 6: Capitulo final -->
 <article class="relative rounded-lg overflow-hidden cursor-pointer select-none">
   <a href="../../Peliculas/pelicula707.html">
     <img src="https://image.tmdb.org/t/p/original/cC2dEleI8zDT045QhuqVjf527yv.jpg" alt="Resident Evil 6: Capítulo final" class="w-full h-auto rounded-lg object-cover transition-transform duration-300 hover:scale-105"/>
