--- a/SEARCH/index.html
+++ b/SEARCH/index.html
@@ -124,7 +124,16 @@
 
 <main class="flex-1 px-4 py-6 max-w-7xl mx-auto mt-16">
   <ul id="busquedas" class="grid grid-cols-3 sm:grid-cols-4 md:grid-cols-5 lg:grid-cols-6 gap-4">
-<!--ABAJO AGREGAR NUEVO CONTENIDO --><!-- Los 4 Fantasticos: Primeros pasos -->
+<!--ABAJO AGREGAR NUEVO CONTENIDO --><!-- Los 4 Fantasticos -->
+<li>
+  <a href="../Peliculas/pelicula713.html" tabindex="0" class="block outline-none focus:ring-2 ring-yellow-400 rounded">
+   <img 
+  src="https://image.tmdb.org/t/p/original/l3Yk65bVdgiMOMeK6O8aZxEBt5J.jpg" alt="poster" class="w-full aspect-[2/3] rounded-lg object-cover mb-2 sm:mb-0" loading="lazy"/>
+    <span class="hidden">Los 4 Fantásticos 2005</span>
+    <span class="hidden">Un grupo de astronautas obtiene superpoderes después de una exposición a la radiación cósmica y debe usarlos para oponerse a los planes de su enemigo, el doctor Victor Von Doom</span>
+  </a>
+</li>
+<!--FIN--><!-- Los 4 Fantasticos: Primeros pasos -->
 <li>
   <a href="../Peliculas/pelicula712.html" tabindex="0" class="block outline-none focus:ring-2 ring-yellow-400 rounded">
    <img 
