--- a/SEARCH/index.html
+++ b/SEARCH/index.html
@@ -124,7 +124,16 @@
 
 <main class="flex-1 px-4 py-6 max-w-7xl mx-auto mt-16">
   <ul id="busquedas" class="grid grid-cols-3 sm:grid-cols-4 md:grid-cols-5 lg:grid-cols-6 gap-4">
-<!--ABAJO AGREGAR NUEVO CONTENIDO --><!-- Los 4 Fantasticos -->
+<!--ABAJO AGREGAR NUEVO CONTENIDO --><!-- Los 4 Fantasticos y Silver Surfer -->
+<li>
+  <a href="../Peliculas/pelicula714.html" tabindex="0" class="block outline-none focus:ring-2 ring-yellow-400 rounded">
+   <img 
+  src="https://image.tmdb.org/t/p/original/pRXgCDTRKEIUy5cySYA4zC5to5B.jpg" alt="poster" class="w-full aspect-[2/3] rounded-lg object-cover mb-2 sm:mb-0" loading="lazy"/>
+    <span class="hidden">Los 4 Fantásticos y Silver Surfer 2007</span>
+    <span class="hidden">Los Cuatro Fantásticos aprenden que no son los únicos seres con superpoderes en el universo cuando se enfrentan al poderoso Silver Surfer y al come planetas Galactus.</span>
+  </a>
+</li>
+<!--FIN--><!-- Los 4 Fantasticos -->
 <li>
   <a href="../Peliculas/pelicula713.html" tabindex="0" class="block outline-none focus:ring-2 ring-yellow-400 rounded">
    <img 
