Crear/Actualizar SEARCH/index.html

--- a/SEARCH/index.html
+++ b/SEARCH/index.html
@@ -124,7 +124,16 @@
 
 <main class="flex-1 px-4 py-6 max-w-7xl mx-auto mt-16">
   <ul id="busquedas" class="grid grid-cols-3 sm:grid-cols-4 md:grid-cols-5 lg:grid-cols-6 gap-4">
-<!--ABAJO AGREGAR NUEVO CONTENIDO --><!-- Los 4 Fantasticos y Silver Surfer -->
+<!--ABAJO AGREGAR NUEVO CONTENIDO --><!-- Los 4 Fantasticos -->
+<li>
+  <a href="../Peliculas/pelicula715.html" tabindex="0" class="block outline-none focus:ring-2 ring-yellow-400 rounded">
+   <img 
+  src="https://image.tmdb.org/t/p/original/349fSE2Zd4fztRKK5BQ08A9rIMI.jpg" alt="poster" class="w-full aspect-[2/3] rounded-lg object-cover mb-2 sm:mb-0" loading="lazy"/>
+    <span class="hidden">Los 4 Fantásticos 2015</span>
+    <span class="hidden">Cuatro jóvenes inadaptados se teletransportan a un peligroso universo alternativo, lo que les confiere extraños poderes. Cuando sus vidas cambian de forma drástica e irremediable, deben aprender a controlar sus nuevas habilidades y trabajar en equipo para salvar al mundo de un viejo conocido que ahora se ha convertido en un temible enemigo. Adaptación contemporánea del equipo de superhéroes de Marvel</span>
+  </a>
+</li>
+<!--FIN--><!-- Los 4 Fantasticos y Silver Surfer -->
 <li>
   <a href="../Peliculas/pelicula714.html" tabindex="0" class="block outline-none focus:ring-2 ring-yellow-400 rounded">
    <img 
