--- a/Plataforma/marvel/index.html
+++ b/Plataforma/marvel/index.html
@@ -174,6 +174,36 @@ document.addEventListener("DOMContentLoaded", () => {
   </a>
   <div class="mt-2 font-semibold text-sm leading-tight truncate">Los 4 Fantásticos: Primeros pasos</div>
   <div class="text-xs text-white/70">2025</div>
+</article><!-- Los 4 Fantasticos -->
+<article class="relative rounded-lg overflow-hidden cursor-pointer select-none">
+  <a href="https://lz.blogdepelis.lat/Peliculas/pelicula715.html">
+    <img src="https://image.tmdb.org/t/p/original/349fSE2Zd4fztRKK5BQ08A9rIMI.jpg" alt="poster" class="w-full h-auto rounded-lg object-cover transition-transform duration-300 hover:scale-105" loading="lazy"/>
+    <div class="absolute top-2 right-2 bg-white/90 text-black text-xs font-semibold rounded-full px-2 py-0.5">
+      Movie
+    </div>
+  </a>
+  <div class="mt-2 font-semibold text-sm leading-tight truncate">Los 4 Fantásticos</div>
+  <div class="text-xs text-white/70">2015</div>
+</article><!-- Los 4 Fantasticos y Silver Surfer -->
+<article class="relative rounded-lg overflow-hidden cursor-pointer select-none">
+  <a href="https://lz.blogdepelis.lat/Peliculas/pelicula714.html">
+    <img src="https://image.tmdb.org/t/p/original/pRXgCDTRKEIUy5cySYA4zC5to5B.jpg" alt="poster" class="w-full h-auto rounded-lg object-cover transition-transform duration-300 hover:scale-105" loading="lazy"/>
+    <div class="absolute top-2 right-2 bg-white/90 text-black text-xs font-semibold rounded-full px-2 py-0.5">
+      Movie
+    </div>
+  </a>
+  <div class="mt-2 font-semibold text-sm leading-tight truncate">Los 4 Fantásticos y Silver Surfer</div>
+  <div class="text-xs text-white/70">2007</div>
+</article><!-- Los 4 Fantasticos -->
+<article class="relative rounded-lg overflow-hidden cursor-pointer select-none">
+  <a href="https://lz.blogdepelis.lat/Peliculas/pelicula713.html">
+    <img src="https://image.tmdb.org/t/p/original/l3Yk65bVdgiMOMeK6O8aZxEBt5J.jpg" alt="poster" class="w-full h-auto rounded-lg object-cover transition-transform duration-300 hover:scale-105" loading="lazy"/>
+    <div class="absolute top-2 right-2 bg-white/90 text-black text-xs font-semibold rounded-full px-2 py-0.5">
+      Movie
+    </div>
+  </a>
+  <div class="mt-2 font-semibold text-sm leading-tight truncate">Los 4 Fantásticos</div>
+  <div class="text-xs text-white/70">2005</div>
 </article><!-- El Invencible Iron Man -->
 <article class="relative rounded-lg overflow-hidden cursor-pointer select-none">
   <a href="https://lz.blogdepelis.lat/Peliculas/pelicula645.html">
