--- a/SEARCH/index.html
+++ b/SEARCH/index.html
@@ -130,7 +130,7 @@
    <img 
   src="https://image.tmdb.org/t/p/original/349fSE2Zd4fztRKK5BQ08A9rIMI.jpg" alt="poster" class="w-full aspect-[2/3] rounded-lg object-cover mb-2 sm:mb-0" loading="lazy"/>
     <span class="hidden">Los 4 Fantásticos 2015</span>
-    <span class="hidden">Cuatro jóvenes inadaptados se teletransportan a un peligroso universo alternativo, lo que les confiere extraños poderes. Cuando sus vidas cambian de forma drástica e irremediable, deben aprender a controlar sus nuevas habilidades y trabajar en equipo para salvar al mundo de un viejo conocido que ahora se ha convertido en un temible enemigo. Adaptación contemporánea del equipo de superhéroes de Marvel</span>
+    <span class="hidden">cuatro fant4asticos f4ntasticos Cuatro jóvenes inadaptados se teletransportan a un peligroso universo alternativo, lo que les confiere extraños poderes. Cuando sus vidas cambian de forma drástica e irremediable, deben aprender a controlar sus nuevas habilidades y trabajar en equipo para salvar al mundo de un viejo conocido que ahora se ha convertido en un temible enemigo. Adaptación contemporánea del equipo de superhéroes de Marvel</span>
   </a>
 </li>
 <!--FIN--><!-- Los 4 Fantasticos y Silver Surfer -->
@@ -139,7 +139,7 @@
    <img 
   src="https://image.tmdb.org/t/p/original/pRXgCDTRKEIUy5cySYA4zC5to5B.jpg" alt="poster" class="w-full aspect-[2/3] rounded-lg object-cover mb-2 sm:mb-0" loading="lazy"/>
     <span class="hidden">Los 4 Fantásticos y Silver Surfer 2007</span>
-    <span class="hidden">Los Cuatro Fantásticos aprenden que no son los únicos seres con superpoderes en el universo cuando se enfrentan al poderoso Silver Surfer y al come planetas Galactus.</span>
+    <span class="hidden">cuatro 2 surfs Los Cuatro Fantásticos aprenden que no son los únicos seres con superpoderes en el universo cuando se enfrentan al poderoso Silver Surfer y al come planetas Galactus.</span>
   </a>
 </li>
 <!--FIN--><!-- Los 4 Fantasticos -->
@@ -148,7 +148,7 @@
    <img 
   src="https://image.tmdb.org/t/p/original/l3Yk65bVdgiMOMeK6O8aZxEBt5J.jpg" alt="poster" class="w-full aspect-[2/3] rounded-lg object-cover mb-2 sm:mb-0" loading="lazy"/>
     <span class="hidden">Los 4 Fantásticos 2005</span>
-    <span class="hidden">Un grupo de astronautas obtiene superpoderes después de una exposición a la radiación cósmica y debe usarlos para oponerse a los planes de su enemigo, el doctor Victor Von Doom</span>
+    <span class="hidden">cuatro 1 Un grupo de astronautas obtiene superpoderes después de una exposición a la radiación cósmica y debe usarlos para oponerse a los planes de su enemigo, el doctor Victor Von Doom</span>
   </a>
 </li>
 <!--FIN--><!-- Los 4 Fantasticos: Primeros pasos -->
@@ -157,7 +157,7 @@
    <img 
   src="https://image.tmdb.org/t/p/original/ckfiXWGEMWrUP53cc6QyHijLlhl.jpg" alt="poster" class="w-full aspect-[2/3] rounded-lg object-cover mb-2 sm:mb-0" loading="lazy"/>
     <span class="hidden">Los 4 Fantásticos: Primeros pasos 2025</span>
-    <span class="hidden">Con un estruendoso trasfondo en un mundo retrofuturista inspirado en los años 60, la Primera Familia de Marvel enfrenta su desafío más intimidante hasta ahora. Obligados a equilibrar sus roles como héroes con la fuerza de su vínculo familiar, deben defender la Tierra de un voraz dios espacial llamado Galactus y su enigmático heraldo, Silver Surfer.</span>
+    <span class="hidden"> cuatro Con un estruendoso trasfondo en un mundo retrofuturista inspirado en los años 60, la Primera Familia de Marvel enfrenta su desafío más intimidante hasta ahora. Obligados a equilibrar sus roles como héroes con la fuerza de su vínculo familiar, deben defender la Tierra de un voraz dios espacial llamado Galactus y su enigmático heraldo, Silver Surfer.</span>
   </a>
 </li>
 <!--FIN--><!-- Los Tipos Malos -->
@@ -175,7 +175,7 @@
    <img 
   src="https://image.tmdb.org/t/p/original/8KzQdF8xERPFvCnrHKfaXuNQBH4.jpg" alt="poster" class="w-full aspect-[2/3] rounded-lg object-cover mb-2 sm:mb-0" loading="lazy"/>
     <span class="hidden">Five Nights at Freddy's 2023</span>
-    <span class="hidden">Un guardia de seguridad con problemas comienza a trabajar en Freddy Fazbear's Pizza. Mientras pasa su primera noche en el trabajo, se da cuenta de que el turno de noche en Freddy's no será tan fácil de superar.</span>
+    <span class="hidden">fnaf  5 cinco noches con freddy alfredo Un guardia de seguridad con problemas comienza a trabajar en Freddy Fazbear's Pizza. Mientras pasa su primera noche en el trabajo, se da cuenta de que el turno de noche en Freddy's no será tan fácil de superar.</span>
   </a>
 </li>
 <!--FIN--><!-- Los tipos malos 2 -->
