--- a/Plataforma/fox/index.html
+++ b/Plataforma/fox/index.html
@@ -166,7 +166,17 @@ document.addEventListener("DOMContentLoaded", () => {
   </header>
   <main class="max-w-[1280px] mx-auto px-4 mt-24">
     <section class="grid grid-cols-2 sm:grid-cols-3 md:grid-cols-4 lg:grid-cols-6 gap-4">
-      <!--PEGAR CONTENIDO AQUI ABAJO--><!-- Los 4 Fantasticos -->
+      <!--PEGAR CONTENIDO AQUI ABAJO--><!-- X-Men: Dias del futuro pasado -->
+<article class="relative rounded-lg overflow-hidden cursor-pointer select-none">
+  <a href="https://lz.blogdepelis.lat/Peliculas/pelicula716.html">
+    <img src="https://image.tmdb.org/t/p/original/ggb9nmS5alJuA0ll0iU5YHiGbb0.jpg" alt="poster" class="w-full h-auto rounded-lg object-cover transition-transform duration-300 hover:scale-105" loading="lazy"/>
+    <div class="absolute top-2 right-2 bg-white/90 text-black text-xs font-semibold rounded-full px-2 py-0.5">
+      Movie
+    </div>
+  </a>
+  <div class="mt-2 font-semibold text-sm leading-tight truncate">X-Men: Días del futuro pasado</div>
+  <div class="text-xs text-white/70">2014</div>
+</article><!-- Los 4 Fantasticos -->
 <article class="relative rounded-lg overflow-hidden cursor-pointer select-none">
   <a href="https://lz.blogdepelis.lat/Peliculas/pelicula715.html">
     <img src="https://image.tmdb.org/t/p/original/349fSE2Zd4fztRKK5BQ08A9rIMI.jpg" alt="poster" class="w-full h-auto rounded-lg object-cover transition-transform duration-300 hover:scale-105" loading="lazy"/>
