Crear/Actualizar SEARCH/index.html

--- a/SEARCH/index.html
+++ b/SEARCH/index.html
@@ -124,7 +124,16 @@
 
 <main class="flex-1 px-4 py-6 max-w-7xl mx-auto mt-16">
   <ul id="busquedas" class="grid grid-cols-3 sm:grid-cols-4 md:grid-cols-5 lg:grid-cols-6 gap-4">
-<!--ABAJO AGREGAR NUEVO CONTENIDO --><!-- Los 4 Fantasticos -->
+<!--ABAJO AGREGAR NUEVO CONTENIDO --><!-- X-Men: Dias del futuro pasado -->
+<li>
+  <a href="../Peliculas/pelicula716.html" tabindex="0" class="block outline-none focus:ring-2 ring-yellow-400 rounded">
+   <img 
+  src="https://image.tmdb.org/t/p/original/ggb9nmS5alJuA0ll0iU5YHiGbb0.jpg" alt="poster" class="w-full aspect-[2/3] rounded-lg object-cover mb-2 sm:mb-0" loading="lazy"/>
+    <span class="hidden">X-Men: Días del futuro pasado 2014</span>
+    <span class="hidden">Los X-Men originales unen fuerzas y envían a Wolverine al pasado en un intento desesperado de cambiar la historia y prevenir un evento que desemboca en la perdición tanto para humanos como para mutantes.</span>
+  </a>
+</li>
+<!--FIN--><!-- Los 4 Fantasticos -->
 <li>
   <a href="../Peliculas/pelicula715.html" tabindex="0" class="block outline-none focus:ring-2 ring-yellow-400 rounded">
    <img 
