--- a/Categorias/suspense/index.html
+++ b/Categorias/suspense/index.html
@@ -78,7 +78,17 @@ stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
 </header>
 <main class="max-w-[1280px] mx-auto px-4 mt-24">
 <section class="grid grid-cols-2 sm:grid-cols-3 md:grid-cols-4 lg:grid-cols-6 gap-4">
-<!--PEGAR CONTENIDO AQUI ABAJO--><!-- Five Nights at Freddy's -->
+<!--PEGAR CONTENIDO AQUI ABAJO--><!-- Ghost Rider: el vengador fantasma -->
+<article class="relative rounded-lg overflow-hidden cursor-pointer select-none">
+  <a href="../../Peliculas/pelicula717.html">
+    <img src="https://image.tmdb.org/t/p/original/5GHGotbrKQOj1z39hmOUHh8pYjP.jpg" alt="Ghost Rider: el vengador fantasma" class="w-full h-auto rounded-lg object-cover transition-transform duration-300 hover:scale-105"/>
+    <div class="absolute top-2 right-2 bg-white/90 text-black text-xs font-semibold rounded-full px-2 py-0.5">
+      Movie
+    </div>
+  </a>
+  <div class="mt-2 font-semibold text-sm leading-tight truncate">Ghost Rider: el vengador fantasma</div>
+  <div class="text-xs text-white/70">2007</div>
+</article><!-- Five Nights at Freddy's -->
 <article class="relative rounded-lg overflow-hidden cursor-pointer select-none">
   <a href="../../Peliculas/pelicula710.html">
     <img src="https://image.tmdb.org/t/p/original/8KzQdF8xERPFvCnrHKfaXuNQBH4.jpg" alt="Five Nights at Freddy's" class="w-full h-auto rounded-lg object-cover transition-transform duration-300 hover:scale-105"/>
