Crear/Actualizar SEARCH/index.html

--- a/SEARCH/index.html
+++ b/SEARCH/index.html
@@ -124,7 +124,16 @@
 
 <main class="flex-1 px-4 py-6 max-w-7xl mx-auto mt-16">
   <ul id="busquedas" class="grid grid-cols-3 sm:grid-cols-4 md:grid-cols-5 lg:grid-cols-6 gap-4">
-<!--ABAJO AGREGAR NUEVO CONTENIDO --><!-- X-Men: Dias del futuro pasado -->
+<!--ABAJO AGREGAR NUEVO CONTENIDO --><!-- Ghost Rider: el vengador fantasma -->
+<li>
+  <a href="../Peliculas/pelicula717.html" tabindex="0" class="block outline-none focus:ring-2 ring-yellow-400 rounded">
+   <img 
+  src="https://image.tmdb.org/t/p/original/5GHGotbrKQOj1z39hmOUHh8pYjP.jpg" alt="poster" class="w-full aspect-[2/3] rounded-lg object-cover mb-2 sm:mb-0" loading="lazy"/>
+    <span class="hidden">Ghost Rider: el vengador fantasma 2007</span>
+    <span class="hidden">Cuando el motociclista Johnny Blaze vende su alma al Diablo para salvar la vida de su padre, se transforma en el Vengador Fantasma, el cazador de recompensas del Diablo, y es enviado a cazar pecadores.</span>
+  </a>
+</li>
+<!--FIN--><!-- X-Men: Dias del futuro pasado -->
 <li>
   <a href="../Peliculas/pelicula716.html" tabindex="0" class="block outline-none focus:ring-2 ring-yellow-400 rounded">
    <img 
