--- a/SEARCH/index.html
+++ b/SEARCH/index.html
@@ -124,7 +124,16 @@
 
 <main class="flex-1 px-4 py-6 max-w-7xl mx-auto mt-16">
   <ul id="busquedas" class="grid grid-cols-3 sm:grid-cols-4 md:grid-cols-5 lg:grid-cols-6 gap-4">
-<!--ABAJO AGREGAR NUEVO CONTENIDO --><!-- Ghost Rider: el vengador fantasma -->
+<!--ABAJO AGREGAR NUEVO CONTENIDO --><!-- Ghost Rider 2: Espiritu de Venganza -->
+<li>
+  <a href="../Peliculas/pelicula718.html" tabindex="0" class="block outline-none focus:ring-2 ring-yellow-400 rounded">
+   <img 
+  src="https://image.tmdb.org/t/p/original/gNk4q6f1sXRE8FEPpMiexCs5K20.jpg" alt="poster" class="w-full aspect-[2/3] rounded-lg object-cover mb-2 sm:mb-0" loading="lazy"/>
+    <span class="hidden">Ghost Rider 2: Espíritu de Venganza 2011</span>
+    <span class="hidden">Cuando el diablo emerge de nuevo con objetivos de asumir el mundo en la forma humana, Johnny Blaze de mala gana sale del ocultamiento para transformar en Ghost Rider, rescatar a un muchacho de 10 años y salvar su alma, hay una oportunidad para que Johnny pueda también salvar su propia alma.</span>
+  </a>
+</li>
+<!--FIN--><!-- Ghost Rider: el vengador fantasma -->
 <li>
   <a href="../Peliculas/pelicula717.html" tabindex="0" class="block outline-none focus:ring-2 ring-yellow-400 rounded">
    <img 
