--- a/Categorias/misterio/index.html
+++ b/Categorias/misterio/index.html
@@ -78,7 +78,17 @@ stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
 </header>
 <main class="max-w-[1280px] mx-auto px-4 mt-24">
 <section class="grid grid-cols-2 sm:grid-cols-3 md:grid-cols-4 lg:grid-cols-6 gap-4">
-<!--PEGAR CONTENIDO AQUI ABAJO--><!-- Ghost: La Sombra del Amor -->
+<!--PEGAR CONTENIDO AQUI ABAJO--><!-- Ace Ventura: Detective de Mascotas -->
+<article class="relative rounded-lg overflow-hidden cursor-pointer select-none">
+  <a href="../../Peliculas/pelicula719.html">
+    <img src="https://image.tmdb.org/t/p/original/zByKfhPuFUEymc0uzHGdIfO7dx5.jpg" alt="Ace Ventura: Detective de Mascotas" class="w-full h-auto rounded-lg object-cover transition-transform duration-300 hover:scale-105"/>
+    <div class="absolute top-2 right-2 bg-white/90 text-black text-xs font-semibold rounded-full px-2 py-0.5">
+      Movie
+    </div>
+  </a>
+  <div class="mt-2 font-semibold text-sm leading-tight truncate">Ace Ventura: Detective de Mascotas</div>
+  <div class="text-xs text-white/70">1994</div>
+</article><!-- Ghost: La Sombra del Amor -->
 <article class="relative rounded-lg overflow-hidden cursor-pointer select-none">
   <a href="../../Peliculas/pelicula690.html">
     <img src="https://image.tmdb.org/t/p/original/gR8np00iNFdMOsoCDTlcUjkGcCC.jpg" alt="Ghost: La Sombra del Amor" class="w-full h-auto rounded-lg object-cover transition-transform duration-300 hover:scale-105"/>
