Crear/Actualizar SEARCH/index.html

--- a/SEARCH/index.html
+++ b/SEARCH/index.html
@@ -124,7 +124,16 @@
 
 <main class="flex-1 px-4 py-6 max-w-7xl mx-auto mt-16">
   <ul id="busquedas" class="grid grid-cols-3 sm:grid-cols-4 md:grid-cols-5 lg:grid-cols-6 gap-4">
-<!--ABAJO AGREGAR NUEVO CONTENIDO --><!-- Ghost Rider 2: Espiritu de Venganza -->
+<!--ABAJO AGREGAR NUEVO CONTENIDO --><!-- Ace Ventura: Detective de Mascotas -->
+<li>
+  <a href="../Peliculas/pelicula719.html" tabindex="0" class="block outline-none focus:ring-2 ring-yellow-400 rounded">
+   <img 
+  src="https://image.tmdb.org/t/p/original/zByKfhPuFUEymc0uzHGdIfO7dx5.jpg" alt="poster" class="w-full aspect-[2/3] rounded-lg object-cover mb-2 sm:mb-0" loading="lazy"/>
+    <span class="hidden">Ace Ventura: Detective de Mascotas 1994</span>
+    <span class="hidden">El detective Ace Ventura, especializado en rescatar animales secuestrados, recibe el encargo de localizar y rescatar el delfin Copo de Nieve, mascota del equipo de fútbol de Miami, que ha sido secuestrado el día anterior a la gran final que debe disputar el equipo.</span>
+  </a>
+</li>
+<!--FIN--><!-- Ghost Rider 2: Espiritu de Venganza -->
 <li>
   <a href="../Peliculas/pelicula718.html" tabindex="0" class="block outline-none focus:ring-2 ring-yellow-400 rounded">
    <img 
