--- a/SEARCH/index.html
+++ b/SEARCH/index.html
@@ -124,7 +124,16 @@
 
 <main class="flex-1 px-4 py-6 max-w-7xl mx-auto mt-16">
   <ul id="busquedas" class="grid grid-cols-3 sm:grid-cols-4 md:grid-cols-5 lg:grid-cols-6 gap-4">
-<!--ABAJO AGREGAR NUEVO CONTENIDO --><!-- Ace Ventura: Detective de Mascotas -->
+<!--ABAJO AGREGAR NUEVO CONTENIDO --><!-- Ace Ventura: Un Loco En Africa -->
+<li>
+  <a href="../Peliculas/pelicula720.html" tabindex="0" class="block outline-none focus:ring-2 ring-yellow-400 rounded">
+   <img 
+  src="https://image.tmdb.org/t/p/original/899yWih4ic8AyczedYiX41g7TvQ.jpg" alt="poster" class="w-full aspect-[2/3] rounded-lg object-cover mb-2 sm:mb-0" loading="lazy"/>
+    <span class="hidden">Ace Ventura: Un Loco En África 1995</span>
+    <span class="hidden">Intentando superar el trauma que le ha dejado el fracaso de su última misión, el inefable detective Ace Ventura, ahora un monasterio budista, es convocado en un peligroso viaje en las selvas de África para encontrar a Shikaka, un animal sagrado desaparecido de la tribu Wachati.</span>
+  </a>
+</li>
+<!--FIN--><!-- Ace Ventura: Detective de Mascotas -->
 <li>
   <a href="../Peliculas/pelicula719.html" tabindex="0" class="block outline-none focus:ring-2 ring-yellow-400 rounded">
    <img 
