--- a/SEARCH/index.html
+++ b/SEARCH/index.html
@@ -124,7 +124,16 @@
 
 <main class="flex-1 px-4 py-6 max-w-7xl mx-auto mt-16">
   <ul id="busquedas" class="grid grid-cols-3 sm:grid-cols-4 md:grid-cols-5 lg:grid-cols-6 gap-4">
-<!--ABAJO AGREGAR NUEVO CONTENIDO --><!-- Doctor Strange: Hechicero supremo -->
+<!--ABAJO AGREGAR NUEVO CONTENIDO --><!-- Doctor Strange en el multiverso de la locura -->
+<li>
+  <a href="../Peliculas/pelicula722.html" tabindex="0" class="block outline-none focus:ring-2 ring-yellow-400 rounded">
+   <img 
+  src="https://image.tmdb.org/t/p/original/xu0RftYPT4crY4ZSf9SMa5UM8dr.jpg" alt="poster" class="w-full aspect-[2/3] rounded-lg object-cover mb-2 sm:mb-0" loading="lazy"/>
+    <span class="hidden">Doctor Strange en el multiverso de la locura 2022</span>
+    <span class="hidden">Doctor Strange, además de recibir ayuda de aliados místicos nuevos y otros ya conocidos, atraviesa las alucinantes y peligrosas realidades alternativas del Multiverso para enfrentarse a un nuevo y misterioso adversario.</span>
+  </a>
+</li>
+<!--FIN--><!-- Doctor Strange: Hechicero supremo -->
 <li>
   <a href="../Peliculas/pelicula721.html" tabindex="0" class="block outline-none focus:ring-2 ring-yellow-400 rounded">
    <img 
