--- a/SEARCH/index.html
+++ b/SEARCH/index.html
@@ -130,7 +130,7 @@
    <img 
   src="https://image.tmdb.org/t/p/original/xu0RftYPT4crY4ZSf9SMa5UM8dr.jpg" alt="poster" class="w-full aspect-[2/3] rounded-lg object-cover mb-2 sm:mb-0" loading="lazy"/>
     <span class="hidden">Doctor Strange en el multiverso de la locura 2022</span>
-    <span class="hidden">Doctor Strange, además de recibir ayuda de aliados místicos nuevos y otros ya conocidos, atraviesa las alucinantes y peligrosas realidades alternativas del Multiverso para enfrentarse a un nuevo y misterioso adversario.</span>
+    <span class="hidden">Doctor Strange, universo extraño dc doc dr dc. doc. dr. además de recibir ayuda de aliados místicos nuevos y otros ya conocidos, atraviesa las alucinantes y peligrosas realidades alternativas del Multiverso para enfrentarse a un nuevo y misterioso adversario.</span>
   </a>
 </li>
 <!--FIN--><!-- Doctor Strange: Hechicero supremo -->
@@ -139,7 +139,7 @@
    <img 
   src="https://image.tmdb.org/t/p/original/wJEZI3PWyMW7qcW6n9jyCh7Cclf.jpg" alt="poster" class="w-full aspect-[2/3] rounded-lg object-cover mb-2 sm:mb-0" loading="lazy"/>
     <span class="hidden">Doctor Strange: Hechicero supremo 2016</span>
-    <span class="hidden">La historia del famoso neurocirujano Dr. Stephen Strange cuya vida cambia para siempre luego de un accidente automovilístico que lo deja sin poder mover sus manos. Cuando la medicina tradicional falla, se ve obligado a buscar una cura y esperanzas en un lugar impensado: una comunidad aislada y misteriosa llamada Kamar-Taj. Rápidamente descubre que éste no es sólo un centro de recuperación, sino también la primera línea de una batalla en contra de fuerzas oscuras y ocultas empeñadas en destruir nuestra realidad. En poco tiempo, Strange, armado con sus poderes mágicos recientemente adquiridos, se ve obligado a elegir entre volver a su antigua vida de riqueza y estatus, o dejarlo todo para defender el mundo como el hechicero más poderoso del planeta.</span>
+    <span class="hidden">dc dr doc extraño dc. doc. dr. La historia del famoso neurocirujano Dr. Stephen Strange cuya vida cambia para siempre luego de un accidente automovilístico que lo deja sin poder mover sus manos. Cuando la medicina tradicional falla, se ve obligado a buscar una cura y esperanzas en un lugar impensado: una comunidad aislada y misteriosa llamada Kamar-Taj. Rápidamente descubre que éste no es sólo un centro de recuperación, sino también la primera línea de una batalla en contra de fuerzas oscuras y ocultas empeñadas en destruir nuestra realidad. En poco tiempo, Strange, armado con sus poderes mágicos recientemente adquiridos, se ve obligado a elegir entre volver a su antigua vida de riqueza y estatus, o dejarlo todo para defender el mundo como el hechicero más poderoso del planeta.</span>
   </a>
 </li>
 <!--FIN--><!-- Ace Ventura: Un Loco En Africa -->
@@ -147,8 +147,8 @@
   <a href="../Peliculas/pelicula720.html" tabindex="0" class="block outline-none focus:ring-2 ring-yellow-400 rounded">
    <img 
   src="https://image.tmdb.org/t/p/original/899yWih4ic8AyczedYiX41g7TvQ.jpg" alt="poster" class="w-full aspect-[2/3] rounded-lg object-cover mb-2 sm:mb-0" loading="lazy"/>
-    <span class="hidden">Ace Ventura: Un Loco En África 1995</span>
-    <span class="hidden">Intentando superar el trauma que le ha dejado el fracaso de su última misión, el inefable detective Ace Ventura, ahora un monasterio budista, es convocado en un peligroso viaje en las selvas de África para encontrar a Shikaka, un animal sagrado desaparecido de la tribu Wachati.</span>
+    <span class="hidden">Ace Ventura 2: Un Loco En África 1995</span>
+    <span class="hidden">aventura Intentando superar el trauma que le ha dejado el fracaso de su última misión, el inefable detective Ace Ventura, ahora un monasterio budista, es convocado en un peligroso viaje en las selvas de África para encontrar a Shikaka, un animal sagrado desaparecido de la tribu Wachati.</span>
   </a>
 </li>
 <!--FIN--><!-- Ace Ventura: Detective de Mascotas -->
@@ -156,8 +156,8 @@
   <a href="../Peliculas/pelicula719.html" tabindex="0" class="block outline-none focus:ring-2 ring-yellow-400 rounded">
    <img 
   src="https://image.tmdb.org/t/p/original/zByKfhPuFUEymc0uzHGdIfO7dx5.jpg" alt="poster" class="w-full aspect-[2/3] rounded-lg object-cover mb-2 sm:mb-0" loading="lazy"/>
-    <span class="hidden">Ace Ventura: Detective de Mascotas 1994</span>
-    <span class="hidden">El detective Ace Ventura, especializado en rescatar animales secuestrados, recibe el encargo de localizar y rescatar el delfin Copo de Nieve, mascota del equipo de fútbol de Miami, que ha sido secuestrado el día anterior a la gran final que debe disputar el equipo.</span>
+    <span class="hidden">Ace Ventura 1: Detective de Mascotas 1994</span>
+    <span class="hidden">aventura El detective Ace Ventura, especializado en rescatar animales secuestrados, recibe el encargo de localizar y rescatar el delfin Copo de Nieve, mascota del equipo de fútbol de Miami, que ha sido secuestrado el día anterior a la gran final que debe disputar el equipo.</span>
   </a>
 </li>
 <!--FIN--><!-- Ghost Rider 2: Espiritu de Venganza -->
@@ -166,7 +166,7 @@
    <img 
   src="https://image.tmdb.org/t/p/original/gNk4q6f1sXRE8FEPpMiexCs5K20.jpg" alt="poster" class="w-full aspect-[2/3] rounded-lg object-cover mb-2 sm:mb-0" loading="lazy"/>
     <span class="hidden">Ghost Rider 2: Espíritu de Venganza 2011</span>
-    <span class="hidden">Cuando el diablo emerge de nuevo con objetivos de asumir el mundo en la forma humana, Johnny Blaze de mala gana sale del ocultamiento para transformar en Ghost Rider, rescatar a un muchacho de 10 años y salvar su alma, hay una oportunidad para que Johnny pueda también salvar su propia alma.</span>
+    <span class="hidden">motociclistas Cuando el diablo emerge de nuevo con objetivos de asumir el mundo en la forma humana, Johnny Blaze de mala gana sale del ocultamiento para transformar en Ghost Rider, rescatar a un muchacho de 10 años y salvar su alma, hay una oportunidad para que Johnny pueda también salvar su propia alma.</span>
   </a>
 </li>
 <!--FIN--><!-- Ghost Rider: el vengador fantasma -->
