Crear/Actualizar SEARCH/index.html

--- a/SEARCH/index.html
+++ b/SEARCH/index.html
@@ -124,7 +124,16 @@
 
 <main class="flex-1 px-4 py-6 max-w-7xl mx-auto mt-16">
   <ul id="busquedas" class="grid grid-cols-3 sm:grid-cols-4 md:grid-cols-5 lg:grid-cols-6 gap-4">
-<!--ABAJO AGREGAR NUEVO CONTENIDO --><!-- Antrum -->
+<!--ABAJO AGREGAR NUEVO CONTENIDO --><!-- Los 33 -->
+<li>
+  <a href="../Peliculas/pelicula726.html" tabindex="0" class="block outline-none focus:ring-2 ring-yellow-400 rounded">
+   <img 
+  src="https://image.tmdb.org/t/p/original/428swQoL0VH65ixfsYxnWCJqGrG.jpg" alt="poster" class="w-full aspect-[2/3] rounded-lg object-cover mb-2 sm:mb-0" loading="lazy"/>
+    <span class="hidden">Los 33 2015</span>
+    <span class="hidden">Cuenta los hechos ocurridos cuando el derrumbe de la mina de San José dejó aislados bajo tierra a 33 mineros durante 69 días. Sin poder comunicarse con sus seres queridos y con la esperanza a punto de desaperecer, estos hombres hicieron acopio de todas sus fuerzas para sobrevivir al tormento que les tocó pasar. Con la angustia por el difícil y problemático rescate que mantuvo en vilo al mundo, la cinta contará de primera mano la desesperación y el heroico esfuerzo por mantener con vida a sus compañeros a 700 metros de profundidad, mientras en la superficie cada día se complicaba más sacarles de ahí. Un retrato de la supervivencia del ser humano en situaciones límite donde todo lo que tiene es el apoyo de la persona a su lado, ya que la esperanza y la vida están en manos de otros.</span>
+  </a>
+</li>
+<!--FIN--><!-- Antrum -->
 <li>
   <a href="../Peliculas/pelicula725.html" tabindex="0" class="block outline-none focus:ring-2 ring-yellow-400 rounded">
    <img 
