--- a/SEARCH/index.html
+++ b/SEARCH/index.html
@@ -139,7 +139,7 @@
    <img 
   src="https://image.tmdb.org/t/p/original/pp2ho64ah9W9jCCIHavXUCuqISr.jpg" alt="poster" class="w-full aspect-[2/3] rounded-lg object-cover mb-2 sm:mb-0" loading="lazy"/>
     <span class="hidden">Together: Juntos hasta la muerte 2025</span>
-    <span class="hidden">Una pareja con problemas en su relación se muda al campo, donde descubren una cueva con una fuerza sobrenatural. Al beber agua de la cueva, comienzan a experimentar transformaciones físicas y emocionales que reflejan su codependencia.</span>
+    <span class="hidden">morir Una pareja con problemas en su relación se muda al campo, donde descubren una cueva con una fuerza sobrenatural. Al beber agua de la cueva, comienzan a experimentar transformaciones físicas y emocionales que reflejan su codependencia.</span>
   </a>
 </li>
 <!--FIN--><!-- Los 33 -->
@@ -148,7 +148,7 @@
    <img 
   src="https://image.tmdb.org/t/p/original/428swQoL0VH65ixfsYxnWCJqGrG.jpg" alt="poster" class="w-full aspect-[2/3] rounded-lg object-cover mb-2 sm:mb-0" loading="lazy"/>
     <span class="hidden">Los 33 2015</span>
-    <span class="hidden">Cuenta los hechos ocurridos cuando el derrumbe de la mina de San José dejó aislados bajo tierra a 33 mineros durante 69 días. Sin poder comunicarse con sus seres queridos y con la esperanza a punto de desaperecer, estos hombres hicieron acopio de todas sus fuerzas para sobrevivir al tormento que les tocó pasar. Con la angustia por el difícil y problemático rescate que mantuvo en vilo al mundo, la cinta contará de primera mano la desesperación y el heroico esfuerzo por mantener con vida a sus compañeros a 700 metros de profundidad, mientras en la superficie cada día se complicaba más sacarles de ahí. Un retrato de la supervivencia del ser humano en situaciones límite donde todo lo que tiene es el apoyo de la persona a su lado, ya que la esperanza y la vida están en manos de otros.</span>
+    <span class="hidden">de san jose Cuenta los hechos ocurridos cuando el derrumbe de la mina de San José dejó aislados bajo tierra a 33 mineros durante 69 días. Sin poder comunicarse con sus seres queridos y con la esperanza a punto de desaperecer, estos hombres hicieron acopio de todas sus fuerzas para sobrevivir al tormento que les tocó pasar. Con la angustia por el difícil y problemático rescate que mantuvo en vilo al mundo, la cinta contará de primera mano la desesperación y el heroico esfuerzo por mantener con vida a sus compañeros a 700 metros de profundidad, mientras en la superficie cada día se complicaba más sacarles de ahí. Un retrato de la supervivencia del ser humano en situaciones límite donde todo lo que tiene es el apoyo de la persona a su lado, ya que la esperanza y la vida están en manos de otros.</span>
   </a>
 </li>
 <!--FIN--><!-- Antrum -->
@@ -157,7 +157,7 @@
    <img 
   src="https://image.tmdb.org/t/p/original/20de4Rcmy4B0L5zyOc3Nc5F7c0D.jpg" alt="poster" class="w-full aspect-[2/3] rounded-lg object-cover mb-2 sm:mb-0" loading="lazy"/>
     <span class="hidden">Antrum 2018</span>
-    <span class="hidden">En 1988, la proyección de una película resultó en la muerte de cincuenta y seis personas cuando el cine de Budapest donde tenía lugar la premiere prendió en llamas. Desde entonces, es un título maldito, marcado a fuego por la tragedia. Ahora, se ha encontrado un nuevo negativo y se está restaurando una nueva copia: la película más mortal de la historia está lista para el reestreno.</span>
+    <span class="hidden">antrun En 1988, la proyección de una película resultó en la muerte de cincuenta y seis personas cuando el cine de Budapest donde tenía lugar la premiere prendió en llamas. Desde entonces, es un título maldito, marcado a fuego por la tragedia. Ahora, se ha encontrado un nuevo negativo y se está restaurando una nueva copia: la película más mortal de la historia está lista para el reestreno.</span>
   </a>
 </li>
 <!--FIN--><!-- La morgue -->
@@ -166,7 +166,7 @@
    <img 
   src="https://image.tmdb.org/t/p/original/b5UgrFjiOAphNNSYnUKbemgQ87t.jpg" alt="poster" class="w-full aspect-[2/3] rounded-lg object-cover mb-2 sm:mb-0" loading="lazy"/>
     <span class="hidden">La morgue 2016</span>
-    <span class="hidden">El dueño de una funeraria de una pequeña localidad y su hijo, que trabaja con él, reciben un día el cadáver de la víctima de un misterioso crimen: una bella joven que no tiene ninguna causa aparente de muerte. Ambos intentarán desvelar los intrigantes motivos del fallecimiento de la joven.</span>
+    <span class="hidden">la autopsia autopcia de jane doe El dueño de una funeraria de una pequeña localidad y su hijo, que trabaja con él, reciben un día el cadáver de la víctima de un misterioso crimen: una bella joven que no tiene ninguna causa aparente de muerte. Ambos intentarán desvelar los intrigantes motivos del fallecimiento de la joven.</span>
   </a>
 </li>
 <!--FIN--><!-- Codigo: Traje rojo -->
