--- a/SEARCH/index.html
+++ b/SEARCH/index.html
@@ -130,7 +130,7 @@
    <img 
   src="https://image.tmdb.org/t/p/original/eucuker3bk9OhZhQMOAA764I4ol.jpg" alt="poster" class="w-full aspect-[2/3] rounded-lg object-cover mb-2 sm:mb-0" loading="lazy"/>
     <span class="hidden">Los Duros 2005</span>
-    <span class="hidden">Patrick Sauvage (Jean-Claude Van Damme) es un ex-combatiente que formaba parte del las fuerzas especiales en la Tormenta del Desierto, combatiendo en Afganistán e Irak. Tras volver a su país es contratado para ser uno de los guardaespaldas de un ex-campeón de los pesos pesados (Razaaq Adoti) que tiene numerosos problemas con un peligroso magnate del Hip-hop (Viv Leacock). Sauvage crea entonces un grupo de veteranos de combate para proteger al boxeador y a su familia, pero todo se complica cuando la hermana del peso pesado (Vivica A. Fox) se enamora de su protector...</span>
+    <span class="hidden">the hard corps Soldados de fortuna, La fuerza de la venganza Ultime Combat Patrick Sauvage (Jean-Claude Van Damme) es un ex-combatiente que formaba parte del las fuerzas especiales en la Tormenta del Desierto, combatiendo en Afganistán e Irak. Tras volver a su país es contratado para ser uno de los guardaespaldas de un ex-campeón de los pesos pesados (Razaaq Adoti) que tiene numerosos problemas con un peligroso magnate del Hip-hop (Viv Leacock). Sauvage crea entonces un grupo de veteranos de combate para proteger al boxeador y a su familia, pero todo se complica cuando la hermana del peso pesado (Vivica A. Fox) se enamora de su protector...</span>
   </a>
 </li>
 <!--FIN--><!-- Doble Impacto -->
