Crear/Actualizar SEARCH/index.html

--- a/SEARCH/index.html
+++ b/SEARCH/index.html
@@ -124,7 +124,16 @@
 
 <main class="flex-1 px-4 py-6 max-w-7xl mx-auto mt-16">
   <ul id="busquedas" class="grid grid-cols-3 sm:grid-cols-4 md:grid-cols-5 lg:grid-cols-6 gap-4">
-<!--ABAJO AGREGAR NUEVO CONTENIDO --><!-- Los Duros -->
+<!--ABAJO AGREGAR NUEVO CONTENIDO --><!-- Invasion a los Estados Unidos -->
+<li>
+  <a href="../Peliculas/pelicula730.html" tabindex="0" class="block outline-none focus:ring-2 ring-yellow-400 rounded">
+   <img 
+  src="https://image.tmdb.org/t/p/original/mE5dSRTKW1dzV7D0pgP8sMxyIa9.jpg" alt="poster" class="w-full aspect-[2/3] rounded-lg object-cover mb-2 sm:mb-0" loading="lazy"/>
+    <span class="hidden">Invasión a los Estados Unidos 1985</span>
+    <span class="hidden">Mikhail Rostov (Richard Lynch), un peligroso terrorista que dirige a un grupo de mercenarios sin escrúpulos, planea comenzar una campaña de terror en los Estados Unidos, pero antes decide acabar con Matt Hunter (Chuck Norris), antiguo integrante de la CIA, que fue su bestia negra en el pasado. Mientras que Hunter trata de salvar su vida de cientos de enemigos que le buscan por todo el país, tendrá que destruir los planes de Rostov que amenazan la estabilidad del país.</span>
+  </a>
+</li>
+<!--FIN--><!-- Los Duros -->
 <li>
   <a href="../Peliculas/pelicula729.html" tabindex="0" class="block outline-none focus:ring-2 ring-yellow-400 rounded">
    <img 
